--- a/plugins/social_buttons/social_buttons.html
+++ b/plugins/social_buttons/social_buttons.html
@@ -1,23 +1,6 @@
-<div id="social_buttons"><div class="fb-like" style="position: relative;top:-3px;" data-send="false" data-layout="button_count" data-width="300" data-show-faces="false"></div>
-<div class="g-plusone" data-size="medium" data-annotation="none"></div>
-<a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
+<div id="social_buttons">
+  <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.invanode.org/" class="sb sb-facebook" target="_blank"></a>
+  <a href="http://twitter.com/intent/tweet?text=%23invanode+CMS+based+on+%23nodejs+http://www.invanode.org/" class="sb sb-twitter" target="_blank"></a>
+  <a href="https://plus.google.com/share?url=http://www.invanode.org/" class="sb sb-gplus" target="_blank"></a>
+  <a href="https://github.com/i-vetrov/InvaNode-mongo" style="margin-right: 0px;" class="sb sb-github" target="_blank"></a>
 </div>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-</script>
-<script>
-  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-</script>
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
